welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:24: error: Int does not take parameters
	p  = litMessage.toInt();
                             ^Array2:28: error: not found: value k
	setCouleurBrosse(T((k+p)%getWorldHeight));
                            ^